# ms-simple

./: Cargo.toml  README.md  Rocket.toml  application.yml
examples/: simple-database.rs  simple.rs
lib/addons/: Cargo.toml
lib/addons/src/: database.rs  lib.rs  repository.rs  schema.rs
lib/addons/src/person/: mod.rs
lib/server/: Cargo.toml
lib/server/src/: handler.rs  lib.rs  router.rs
src/: error.rs  external.rs  handler.rs  lib.rs
