#
# Building first ms in Rust
#
[workspace]
members = [
    ".",
    "lib/addons",
#    "lib/futures-mpsc-lossy",
#    "lib/hyper-balance",
#    "lib/server",
#    "lib/router",
#    "lib/stack",
#    "lib/task",
#    "lib/timeout",
]

[package]
name = "rust-summer"
version = "0.0.1"
authors = ["Gonzalo Aguilar <gaguilar@level2crm.com>"]
publish = false

[features]
default = ["flaky_tests"]
# Disable to skip certain tests that should not be run on CI.
flaky_tests = []

[dependencies]
summer-addons   = { path = "lib/addons" }

#linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", rev = "0d04051e5867c26cb41c7fe3eb9289df6de87428" } #tag = "v0.1.7" }

#bytes = "0.4"
log = "0.4"
env_logger = "0.6"
clap = "2.33"
config = "0.10"

#futures = "0.1"
#futures-watch = { git = "https://github.com/carllerche/better-future" }
#diesel = { version = "1.0.0", features = ["postgres"] }
#dotenv = "0.9.0"
#r2d2-diesel = "1.0"
#r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = { version = "0.4",  default-features = false, features = ["json"] }
rocket_prometheus = "0.3.2"

# Remove
diesel = { version = "1.4", features = ["mysql"] }


#[target.'cfg(target_os = "linux")'.dependencies]
#libc = "0.2"
#procinfo = "0.4.2"

[dev-dependencies]
diesel = { version = "1.4", features = ["mysql"] }

#net2 = "0.2"
#quickcheck = { version = "0.8", default-features = false }
#ms-asset-server = { path = "./lib/server" } #, features = ["test_util"]
#linkerd2-task    = { path = "lib/task", features = ["test_util"] }
#linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", features = ["arbitrary"], rev = "0d04051e5867c26cb41c7fe3eb9289df6de87428" } #tag = "v0.1.7" }
#flate2 = { version = "1.0.1", default-features = false, features = ["rust_backend"] }
# `tokio-io` is needed for TCP tests, because `tokio::io` doesn't re-export
# the `read` function.
#tokio-io = "0.1.6"
#tokio-current-thread = "0.1.4"

# Debug symbols end up chewing up several GB of disk space, so better to just
# disable them.
[profile.dev]
#debug = false
[profile.test]
debug = false

#[patch.crates-io]
#webpki = { git = "https://github.com/seanmonstar/webpki", branch = "cert-dns-names" }



# https://users.rust-lang.org/t/cargo-test-internal-packages/5187/2
#[[test]]
#name = "pkg_crypt"
#path = "lib/pkg_crypt/src/lib.rs" 
