#
# Server part of the asset microservice
#
[package]
name = "ms-asset-server"
version = "0.0.1"
authors = ["Gonzalo Aguilar <gaguilar@level2crm.com>"]
publish = false

[features]
default = []

[dependencies]
log = "0.4"
rocket = "0.4"
rocket_codegen = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"

rocket_contrib = { version = "0.4",  default-features = false, features = ["json"] }

[dev-dependencies]
#quickcheck = { version = "0.8", default-features = false }

